--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -57,6 +57,7 @@
 .keyframe.ghost .outline { opacity: .7; }
 
 #ghost {
+	background-color: rgba(255, 128, 0, var(--debug-hitbox-opacity));
 	--negative-offset-weight: calc(1 - var(--offset-weight));
 	--offset-x: calc(0.5 * var(--zoom) * var(--negative-offset-weight) * 1px - 12px * var(--negative-offset-weight) + -16px * var(--offset-weight));
 	transform: translateX(var(--offset-x)) translateY(-16px);
