more slide settings

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,19 +1,20 @@
 :root {
-	--error: #EE6183;
-	--piss: #C482ED;
-	--blue: #454DFE;
-	--mint: #A8EEEE;
-	--gruble: #5DE9AE;
+	--error: #ee6183;
+	--piss: #c482ed;
+	--blue: #454dfe;
+	--mint: #a8eeee;
+	--gruble: #5de9ae;
 
-	--c900: #EBEEF9;
-	--c800: #AEB7DA;
-	--c700: #707BA6;
-	--c600: #4F587B;
-	--c400: #2D344F;
-	--c300: #171D33;
-	--c250: #0C1123;
-	--c200: #07071C;
-	--c100: #01010D;
+	--c900: #ebeef9;
+	--c800: #aeb7da;
+	--c700: #707ba6;
+	--c600: #4f587b;
+	--c500: #454e6f;
+	--c400: #2d344f;
+	--c300: #171d33;
+	--c250: #0c1123;
+	--c200: #07071c;
+	--c100: #01010d;
 
 	--bg: var(--c200);
 	--fg: var(--c900);
